--- a/BusReservationSystem/src/main/resources/templates/register.html
+++ b/BusReservationSystem/src/main/resources/templates/register.html
@@ -65,6 +65,14 @@
                           th:field="*{password}" required
                             autofocus="autofocus" />
                     </div>
+                    
+                    <div class="form-group">
+                        <label class="control-label" for="role"> 
+                           Role </label> <select id="role" th:field="*{role}" class="form-control form-control-lg">
+													<option value="USER">USER</option>
+													<option value="ADMIN">ADMIN</option>
+												</select>
+                    </div>
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">
